--- a/index.html
+++ b/index.html
@@ -36,42 +36,51 @@
                     </div>
                     <ul tabindex="0"
                         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-                        <li><a>Item 1</a></li>
                         <li>
-                            <a>Parent</a>
-                            <ul class="p-2">
-                                <li><a>Submenu 1</a></li>
-                                <li><a>Submenu 2</a></li>
-                            </ul>
+                            <a href=""><i class="fa-solid fa-question"></i>FAQ</a>
                         </li>
-                        <li><a>Item 3</a></li>
+                        <li>
+                            <a href=""><i class="fa-solid fa-book-open"></i></i>Learn</a>
+                        </li>
+                        <li>
+                            <a href=""><i class="fa-solid fa-right-from-bracket"></i>Logout</a>
+                        </li>
                     </ul>
                 </div>
-                <a href="" class="flex items-center"><span>English</span>
-                <img src="./assets/logo.png" alt="">
-                <span>জানালা</span>
+                <a href="" class="flex items-center gap-1">
+                    <span class="text-lg font-bold">English</span>
+                    <img src="./assets/logo.png" alt="">
+                    <span class="font-bangla text-lg font-semibold">জানালা</span>
                 </a>
             </div>
-            <div class="navbar-center hidden lg:flex">
-                <ul class="menu menu-horizontal px-1">
-                    <li><a>Item 1</a></li>
+            <div class="navbar-end hidden lg:flex">
+                <ul class="menu menu-horizontal px-1 space-x-4">
                     <li>
-                        <details>
-                            <summary>Parent</summary>
-                            <ul class="p-2">
-                                <li><a>Submenu 1</a></li>
-                                <li><a>Submenu 2</a></li>
-                            </ul>
-                        </details>
+                        <a href="" class="btn btn-soft btn-primary"><i class="fa-solid fa-question"></i>FAQ</a>
                     </li>
-                    <li><a>Item 3</a></li>
+                    <li>
+                        <a href="" class="btn btn-soft btn-primary"><i class="fa-solid fa-book-open"></i></i>Learn</a>
+                    </li>
+                    <li>
+                        <a href="" class="btn btn-soft btn-primary"><i
+                                class="fa-solid fa-right-from-bracket"></i>Logout</a>
+                    </li>
                 </ul>
-            </div>
-            <div class="navbar-end">
-                <a class="btn">Button</a>
             </div>
         </div>
     </header>
+    <section class="flex flex-col-reverse md:flex-row gap-10 justify-between py-5 w-11/12 mx-auto items-center">
+        <div class="content flex-1 text-center md:text-left">
+            <h2 class="text-4xl font-bold mb-8"><span class="text-sky-500 ">English</span> is Easy!!</h2>
+            <p class="font-bangla text-xl ">
+                আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান, আমাদের
+                Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ
+            </p>
+        </div>
+        <div class="image flex-1">
+            <img src="./assets/hero-student.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
