--- a/index.html
+++ b/index.html
@@ -97,9 +97,12 @@
 
     <div class="Lesson-Container text-center mt-4">
         <h2 class="text-3xl font-bold mb-8"><span class="text-sky-500 ">Let's</span> Learn Vocabularies</h2>
-        <div id="level-container" class="flex gap-5 flex-wrap justify-center">
+        <div id="level-container" class="flex gap-5 flex-wrap justify-center mb-5">
         </div>
     </div>
+    <section id="word-container" class="mx-auto bg-sky-600 rounded-xl p-10 my-10 w-11/12 grid grid-cols-3 gap-5">
+        
+    </section>
     <script src="./script/script.js"></script>
 </body>
 
