--- a/index.html
+++ b/index.html
@@ -101,8 +101,27 @@
         </div>
     </div>
     <section id="word-container" class="mx-auto bg-sky-600 rounded-xl p-10 my-10 w-11/12 grid grid-cols-3 gap-5">
-        
+        <div class="text-center col-span-full space-y-5">
+            <p class="text-2xl font-medium text-gray-300 font-bangla">আপনি এখনো কোন Lesson Select করেন নি</p>
+            <h2 class="font-bold text-3xl">একটি Lesson Select করুন।</h2>
+        </div>
     </section>
+    
+    <!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+    <h3 class="text-lg font-bold">Hello!</h3>
+    <p class="py-4">Press ESC key or click the button below to close</p>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
+
     <script src="./script/script.js"></script>
 </body>
 
