--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@
         <div id="level-container" class="flex gap-5 flex-wrap justify-center mb-5">
         </div>
     </div>
+
+    <section class=" flex justify-center ">
+        <div class="join">
+        <div>
+            <label class="input validator join-item">
+                <input id="input-search" type="text" placeholder="search vocabulary" required />
+            </label>
+        </div>
+        <button id="btn-search" class="btn btn-primary join-item">Search Now</button>
+    </div>
+    </section>
+
+    <section id="spinner" class="flex justify-center items-center py-10 hidden">
+        <span class="loading loading-dots loading-xl"></span>
+    </section>
+
     <section id="word-container" class="mx-auto bg-sky-600 rounded-xl p-10 my-10 w-11/12 grid grid-cols-3 gap-5">
         <div class="text-center col-span-full space-y-5">
             <p class="text-2xl font-medium text-gray-300 font-bangla">আপনি এখনো কোন Lesson Select করেন নি</p>
@@ -112,7 +128,7 @@
     <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
         <div class="modal-box">
             <div id="modal-container" class="space-y-5">
-                
+
             </div>
             <div class="modal-action">
                 <form method="dialog">
